--- a/scrollbarTest.html
+++ b/scrollbarTest.html
@@ -7,16 +7,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kafka.dev/jsprojects</title>
-    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="jsprojectsstyles.css">
     <link rel="stylesheet" href="scrollbar.css">
     <script src="scrollbar.js"></script>
 </head>
 
-<body class="clouds-background large-box-body" style="overflow-y: hidden;">
+<body class="clouds-background large-box-body">
     <div class="nav-container">
         <!--Info Text Box-->
-        <div class="fixed-container d-flex flex-column p-3 align-items-right">
+        <div class="fixed-container flex-column p-3 align-items-right">
             <div class="navWindow card flex-column" style="width: 20rem; height: 20rem;">
                 <div class="card-bodytext-center">
                     <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1 m-0">
@@ -58,10 +58,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex align-items-center justify-content-center pt-0">
-                        <div 
-                            class="text-card p-1 align-items-center justify-content-center"
-                            style="width: 19rem; height: 16rem; overflow-y: hidden; overflow-x: hidden;">
+                    <div class="d-flex pt-0">
+                        <div data-scroll-group-id="scrollGroup1" class="scroll-container text-card p-1"
+                            style="width: 19rem; height: 16rem; overflow-y: hidden;">
                             <div data-scroll-group-id="scrollGroup1" class="scroll-content window-menu-text">
                                 <p>The purpose of this page is to serve as a spot where all the projects I
                                     created
@@ -76,21 +75,34 @@
                                     eventually
                                     your memories of it behind.
                                 </p>
-                                <div data-scroll-group-id="scrollGroup1" class="scroll-container">
-                                    <div data-scroll-group-id="scrollGroup1" class="custom-scrollbar">
-                                        <button data-scroll-group-id="scrollGroup1"
-                                            class="custom-scrollbar-thumb"></button>
-                                    </div>
-                                    <button data-scroll-group-id="scrollGroup1"
-                                        class="scroll-button scroll-up-button">▲</button>
-                                    <button data-scroll-group-id="scrollGroup1"
-                                        class="scroll-button scroll-down-button">▼</button>
-                                </div>
+                                <p>The least painful way to navigate this page is by using the <u>F</u>ile menu
+                                    above to select and jump to the project you want to view. You can use the
+                                    <u>M</u>enu menu <i>(I know, and I'm not sorry)</i> to either return to the
+                                    homepage or to see my more substaintive javascript projects. You are also
+                                    welcome to close your browser at any time leaving this website and
+                                    eventually
+                                    your memories of it behind.
+                                </p>
+                                <p>The least painful way to navigate this page is by using the <u>F</u>ile menu
+                                    above to select and jump to the project you want to view. You can use the
+                                    <u>M</u>enu menu <i>(I know, and I'm not sorry)</i> to either return to the
+                                    homepage or to see my more substaintive javascript projects. You are also
+                                    welcome to close your browser at any time leaving this website and
+                                    eventually
+                                    your memories of it behind.
+                                </p>
                             </div>
 
                         </div>
-
-
+                        <div class="d-flex flex-column justify-content-center">
+                            <div data-scroll-group-id="scrollGroup1" class="custom-scrollbar">
+                                <button data-scroll-group-id="scrollGroup1" class="scroll-button scroll-up-button">▲</button>
+                                <button data-scroll-group-id="scrollGroup1" class="custom-scrollbar-thumb"></button>
+                                
+                                <button data-scroll-group-id="scrollGroup1" class="scroll-button scroll-down-button">▼</button>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
