--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -9,8 +8,9 @@
     <title>kafka.dev/index</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
+    <link rel="stylesheet" href="scrollbar.css">
+    <script src="scrollbar.js"></script>
 </head>
-
 <body class="clouds-background">
     <div class="container p-4 d-flex flex-column flex-md-row justify-content-left">
 
@@ -100,7 +100,8 @@
                                     class="open-popup xButton d-flex align-items-center justify-content-center">x</button>
                             </div>
                         </h5>
-                        <p class="window-bodyText">Press OK to view javascript projects that caused significantly less tears than the custom scrollbar you see on this page.</p>
+                        <p class="window-bodyText">Press OK to view javascript projects that caused significantly less
+                            tears than the custom scrollbar you see on this page.</p>
                     </div>
                     <div class="d-flex flex-column align-items-center justify-content-center">
                         <button id="projectsButton" class="okButton" onclick="navLink('jsprojects.html')">OK</button>
@@ -136,10 +137,10 @@
                     </h5>
                     <div class="d-flex pt-3 align-items-center justify-content-center">
 
-                        <div class="text-card scroll-container p-0 align-items-center justify-content-center"
+                        <div data-scroll-group-id="scrollGroup0"
+                            class="scroll-container text-card p-0 align-items-center justify-content-center"
                             style="width: 19rem; height: 21.5rem; position: relative;">
-
-                            <div class="scroll-content window-welcomeText">
+                            <div data-scroll-group-id="scrollGroup0" class="scroll-content window-welcomeText">
                                 <p>This is a website. Does a website ever really belong to anyone? It is my website when
                                     I am working on it. It is your website when you are using it. It is our website. It
                                     belongs to everyone. <i>Except for you, Eric.</i></p>
@@ -154,12 +155,16 @@
                                     you doing the same? Or are you insisting on using Firefox? (I assume no one uses
                                     Edge).</p>
                             </div>
-                            <div class="custom-scrollbar">
-                                <button class="custom-scrollbar-thumb"></button>
+                        </div>
+                        <div class="d-flex flex-column justify-content-center">
+                            <div data-scroll-group-id="scrollGroup0" class="custom-scrollbar">
+                                <button data-scroll-group-id="scrollGroup0"
+                                    class="scroll-button scroll-up-button">▲</button>
+                                <button data-scroll-group-id="scrollGroup0" class="custom-scrollbar-thumb"></button>
+                                <button data-scroll-group-id="scrollGroup0"
+                                    class="scroll-button scroll-down-button">▼</button>
                             </div>
                         </div>
-                        <button class="scroll-button scroll-up-button">▲</button>
-                        <button class="scroll-button scroll-down-button">▼</button>
                     </div>
                 </div>
             </div>
@@ -180,7 +185,7 @@
         <div class="popup close-popup" id="xpawNGPopup" data-popup-id="xpawNGPopup">
             <div class="popup-content">
                 <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1">
-                    kafka.dev/pawNG/alter
+                    kafka.dev/pawNG/alert
                     <button data-popup-id="xpawNGPopup"
                         class="close close-popup d-flex m-0 my-0 align-items-center justify-content-center"
                         id="closexpawNGPopupButton">&times;</button>
@@ -234,7 +239,7 @@
                         class="close close-popup  d-flex m-0 my-0 align-items-center justify-content-center"
                         id="closexPortfolioPopupButton">&times;</button>
                 </h5>
-                <p class="window-bodyText">Not a fan of puns? You must be fun at parties.</p>
+                <p class="window-bodyText">Dogs may drink toilet water, but you drink IPAs.</p>
             </div>
         </div>
         <!--Pop-up for xProjects-->
@@ -253,7 +258,5 @@
     </div>
     </div>
     </div>
-
 </body>
-
 </html>
