--- a/pawng.html
+++ b/pawng.html
@@ -6,6 +6,7 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
+    <script src="script.js"></script>
     <title>kafka.dev/pawNG</title>
 </head>
 
@@ -27,7 +28,7 @@
 
         <a class="" href="index.html">Home</a>
 
-        <script src="pawNG-v2.js"></script>
+        <script src="pawng.js"></script>
 
 
     </div>
