added mountains table in jsprojects might have broken pawng fuck

--- a/pawng.html
+++ b/pawng.html
@@ -28,7 +28,7 @@
 
         <a class="" href="index.html">Home</a>
 
-        <script src="pawng.js"></script>
+        <script src="pawNG-v2.js"></script>
 
 
     </div>
