--- a/jsprojects.html
+++ b/jsprojects.html
@@ -215,19 +215,23 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="pb-5 d-flex flex-row justify-content-evenly">
+                                        <div class="pb-5 ps-4 d-flex flex-row justify-content-right">
                                             <div class="p3-fishtank-card">
                                                 <h5
                                                     class="topBar custom-windowTitle d-flex justify-content-between p-1 m-0">
                                                     <div class="d-flex align-items-center">
-                                                        <div class="d-flex m-1 my-0">kafka.dev/jsprojects/fishtank</div>
+                                                        <div class="d-flex m-1 my-0">kafka.dev/jsprojects/mountains
+                                                        </div>
                                                     </div>
                                                     <div class="d-flex">
                                                         <!--Click Close Button-->
-                                                        <button
-                                                            class="xButton d-flex my-0 mx-0 align-items-center justify-content-center">x</button>
+                                                        <button data-popup-id="xMountainPopup"
+                                                            class="xButton open-popup d-flex my-0 mx-0 align-items-center justify-content-center">x</button>
                                                     </div>
                                                 </h5>
+                                                <div class="d-flex pt-3 flex-collumn justify-content-center">
+                                                    <div id="mountains"></div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -302,6 +306,21 @@
             </div>
         </div>
         <!--Pop-ups for projects? Jk, jk... unless...-->
+        <div class="popup close-popup" id="xMountainPopup" data-popup-id="xMountainPopup">
+            <div class="popup-content">
+                <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1">
+                    kafka.dev/projects/alert
+                    <button data-popup-id="xMountainPopup"
+                        class="close close-popup  d-flex m-0 my-0 align-items-center justify-content-center"
+                        id="closexMountainPopupButton">&times;</button>
+                </h5>
+                <p class="window-bodyText">This table was derived from an exercise in Chapter 14 of <br /> <a
+                        href="https://eloquentjavascript.net/" target="_blank"><i>Eloquent Javascript</i>
+                        by Marijn Haverbeke.</a><br /> The table was created using JavaScript from an array of objects <br />
+                    each containing information on each mountain.<br /> It was style partly in css, and mostly in JavaScript.
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 
