--- a/pawng.html
+++ b/pawng.html
@@ -26,7 +26,7 @@
             <canvas id="myCanvas" width="600" height="300"></canvas>
         </div>
 
-        <a class="" href="index.html">Home</a>
+        <a class="" href="index.html">Index</a>
 
         <script src="pawng.js"></script>
 
