--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             play?</p>
                     </div>
                     <div class="d-flex flex-column align-items-center justify-content-center">
-                        <button id="pawNGButton" class="okButton" onclick="navLink('pawNG.html')">OK</button>
+                        <button id="pawNGButton" class="okButton" onclick="navLink('pawng.html')">OK</button>
                     </div>
                 </div>
             </div>
