eric made me do it

--- a/jsprojects.html
+++ b/jsprojects.html
@@ -317,7 +317,7 @@
                 <p class="window-bodyText">This table was derived from an exercise in Chapter 14 of <br /> <a
                         href="https://eloquentjavascript.net/" target="_blank"><i>Eloquent Javascript</i>
                         by Marijn Haverbeke.</a><br /> The table was created using JavaScript from an array of objects <br />
-                    each containing information on each mountain.<br /> It was style partly in css, and mostly in JavaScript.
+                    each containing information on each mountain.<br /> It was styled exclusively using JavaScript.
                 </p>
             </div>
         </div>
