--- a/catvmouse.html
+++ b/catvmouse.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </div>
-            <canvas id="catVmouseCanvas" width="600" height="400" tabindex="0"></canvas>
+            <canvas id="catVmouseCanvas" width="600" height="400" tabindex="0" autofocus></canvas>
         </div>
         <script src="catvmouse.js"></script>
     </div>
