added platform game in place of pawng for homepage

--- a/about.html
+++ b/about.html
@@ -44,8 +44,9 @@
                             <div class="dropdown-button"><u>M</u>enu</div>
                             <div class="dropdown-content">
                                 <a href="index.html">Home</a>
-                                <a href="pawng.html">pawNG</a>
-                                <a href="jsprojects.html">JS projects</a>
+                                <a href="platformgame.html">A Platform Game</a>
+                                <a href="jsprojects.html">JS pawjects</a>
+                                <a href="portfolio.html">Pawtfolio</a>
                             </div>
                         </div>
                         <div class="d-flex p-0">
