--- a/jsprojects.html
+++ b/jsprojects.html
@@ -47,8 +47,8 @@
                                     <div class="dropdown-content">
                                         <a href="index.html">Home</a>
                                         <a href="about.html">aboutMEow</a>
-                                        <a href="pawng.html">pawNG</a>
-                                        <a href="portfolio.html">Portfolio </a>
+                                        <a href="platformgame.html">A Platform Game</a>
+                                        <a href="portfolio.html">Pawtfolio </a>
                                         <!-- <a href="#">Project 3</a> -->
                                     </div>
                                 </div>
